Wed Jul 31 23:39:27 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* etc/*.doxygen: Change DOT_PATH from /usr/local/bin/ to 
	  empty, forcing doxygen to look for the dot program in PATH.
	  This eliminates warnings in the Doxygen nightly build.

Wed Jul 31 12:23:47 2002  Steve Huston  <shuston@riverace.com>

        * ace/Malloc.cpp:
        * ace/Malloc_T.cpp:
        * tests/Malloc_Test.cpp: Changed logging of pointers to %@

        * tests/Mem_Map_Test.cpp: Fixed loop bound error.

Wed Jul 31 11:34:58 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/index.html: Added a link to ACEXML document.

Wed Jul 31 10:47:54 2002  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/rules.local.GNU:

          Added a gnu macro (DEPEND_CMD_ARGS) to the g++dep line to allow
          pasing arguments (such as -R) to g++dep when running "make depend"

Wed Jul 31 08:41:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h:
          For the compilation of Win32_Asynch_IO we now need to have
          FILE_SEGMENT_ELEMENT from winnt.h and ReadFileScatter and
          WriteFileScatter from winbase.h.
          These are not in the header files of the MingW w32api 1.4/1.5
          release. That's why we do these union/defines also in this header
          file. By adding the defines ACE_MINGW_LACKS_READWRITE_FILESCATTER
          and ACE_MINGW_LACKS_FILE_SEGMENT_ELEMENT to your config.h file
          these defines/union are done by ACE for MingW32 so that everything
          will compile.

Wed Jul 31 08:11:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/Task.cpp:
          Also the MinGW32 GCC3.1 compiler has problems with the
          reinterpret_cast in the svc_run method. Use the static_cast instead.

Wed Jul 31 07:40:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Enabled warnings to get them in the doxygen scoreboard.

        * ace/Configuration.cpp: